<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".GeneratorPage.GeneratorFragment">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_view_main"
        android:layout_width="match_parent"
        android:layout_height="218dp"
        android:layout_marginHorizontal="51dp"
        android:layout_marginTop="120dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            app:shapeAppearanceOverlay="@style/ButtonGenerateStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="64dp"
            android:text="@string/generate_button"/>
        <com.google.android.material.button.MaterialButton
            app:shapeAppearanceOverlay="@style/ButtonSettingStyle"
            app:icon="@drawable/setting_icon"
            app:iconSize="29dp"
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="64dp" />
    </LinearLayout>
    <TextView
        android:textAppearance="@style/RegularText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hack_for"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/BoldText"
        android:text="@string/plug_count_years"/>



</LinearLayout>